Changed header texts, main heading and subsequent paragraph text. Also added main hotel photo. Changed flex shrink properties on header-left and header-right to make sure image doesn't shrink too much on smaller screens.

--- a/styles.css
+++ b/styles.css
@@ -73,9 +73,9 @@ a {
 .header-left {
     display: flex;
     justify-content: flex-start;
-    flex: 1 1 50%;
+    flex: 1 2 50%;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
     color: #F9FAF8;
     border: 1px solid black;
 }
@@ -87,13 +87,13 @@ a {
 .header-right {
     display: flex;
     justify-content: center;
-    flex: 1 1 50%;
+    flex: 0 0.5 50%;
     border: 1px solid black;
 }
 
 .header-right > img {
-    width: 400px;
-    height: auto;
+    width: 75%;
+    object-fit: contain;
 }
 
 button {
